Fix height if cookie banner visible; fix width on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -96,8 +96,8 @@ header h1 {
 
 main {
   margin: 0 auto;
-  width: 600px;
-  padding-bottom: 80px;
+  max-width: 600px;
+  padding-bottom: 160px;
 }
 main #result {
   display: none;
